Initializes Jotline project fork and rebrands
This commit rebrands the project from "Handy" to "Jotline" and establishes its new identity as a fork.

Updates include widespread name changes across code, configuration files, UI text, and documentation (e.g., `Cargo.toml`, `package.json`, `tauri.conf.json`, `README.md`, `AGENTS.md`). The project version is reset to `0.1.0`.

All GitHub Actions workflows, issue/PR templates, funding information, changelog, and contribution guidelines are removed, signifying a fresh start for project infrastructure and governance. The Tauri auto-updater plugin is also removed.

The `README.md` and `AGENTS.md` files are completely revised to outline Jotline's vision, planned features, and specific strategies for maintaining the fork from the upstream Handy project.

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -83,7 +83,7 @@
     },
     "permissions": {
       "title": "Permissions Required",
-      "description": "Handy needs a couple of permissions to work properly.",
+      "description": "Jotline needs a couple of permissions to work properly.",
       "microphone": {
         "title": "Microphone Access",
         "description": "Required to hear your voice for transcription."
@@ -139,7 +139,7 @@
     "general": {
       "title": "General",
       "shortcut": {
-        "title": "Handy Shortcuts",
+        "title": "Jotline Shortcuts",
         "description": "Configure keyboard shortcuts to trigger speech-to-text recording",
         "loading": "Loading shortcuts...",
         "none": "No shortcuts configured",
@@ -238,11 +238,11 @@
       },
       "autostart": {
         "label": "Launch on Startup",
-        "description": "Automatically start Handy when you log in to your computer."
+        "description": "Automatically start Jotline when you log in to your computer."
       },
       "showTrayIcon": {
         "label": "Show Tray Icon",
-        "description": "Display the Handy icon in the system tray."
+        "description": "Display the Jotline icon in the system tray."
       },
       "overlay": {
         "title": "Overlay Position",
@@ -400,7 +400,7 @@
       },
       "updateChecks": {
         "label": "Check for Updates",
-        "description": "Automatically check for new versions of Handy"
+        "description": "Automatically check for new versions of Jotline"
       },
       "soundTheme": {
         "label": "Sound Theme",
@@ -464,11 +464,11 @@
       "title": "About",
       "version": {
         "title": "Version",
-        "description": "Current version of Handy"
+        "description": "Current version of Jotline"
       },
       "appDataDirectory": {
         "title": "App Data Directory",
-        "description": "Location where Handy stores its data"
+        "description": "Location where Jotline stores its data"
       },
       "sourceCode": {
         "title": "Source Code",
@@ -477,7 +477,7 @@
       },
       "supportDevelopment": {
         "title": "Support Development",
-        "description": "Help us continue building Handy",
+        "description": "Help us continue building Jotline",
         "button": "Donate"
       },
       "acknowledgments": {
@@ -485,7 +485,7 @@
         "whisper": {
           "title": "Whisper.cpp",
           "description": "High-performance inference of OpenAI's Whisper automatic speech recognition model",
-          "details": "Handy uses Whisper.cpp for fast, local speech-to-text processing. Thanks to the amazing work by Georgi Gerganov and contributors."
+          "details": "Jotline uses Whisper.cpp for fast, local speech-to-text processing. Thanks to the amazing work by Georgi Gerganov and contributors."
         }
       }
     }
@@ -528,7 +528,7 @@
   },
   "accessibility": {
     "permissionsRequired": "Accessibility Permissions Required",
-    "permissionsDescription": "Handy needs accessibility permissions to type transcribed text.",
+    "permissionsDescription": "Jotline needs accessibility permissions to type transcribed text.",
     "openSettings": "Open System Settings",
     "dismiss": "Dismiss"
   },
@@ -537,7 +537,7 @@
   },
   "appLanguage": {
     "title": "Application Language",
-    "description": "Change the language of the Handy interface"
+    "description": "Change the language of the Jotline interface"
   },
   "overlay": {
     "transcribing": "Transcribing...",
